# Armor-Pose-Optimization

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: workflow.md
.claude/hooks/: check-naming.sh  check-task-delegation.sh  enter-plan-mode.sh  exit-plan-mode.sh  pre-build-check.sh
docs/: AlgorithmReference.md  Conventions.md  Debug.md  DebugGUI.md
docs/superpowers/plans/: 2026-06-25-armor-match-and-classification.md  2026-06-25-debug-layer-system.md  2026-06-25-light-detection-migration.md
docs/superpowers/specs/: 2026-06-25-light-detection-migration-design.md
src/armor_detector/: CMakeLists.txt  package.xml
src/armor_detector/Test/video/video1/: metadata.yaml
src/armor_detector/Test/video/video2/: metadata.yaml
src/armor_detector/Test/video/video3/: metadata.yaml
src/armor_detector/Test/video/video4/: metadata.yaml
src/armor_detector/Test/video/video5/: metadata.yaml
src/armor_detector/config/: camera_info.yaml  config.yaml
src/armor_detector/include/armor_detector/: CameraInfo.hpp  CameraProvider.hpp  DetectorNode.hpp  Frame.hpp  NumberClassifier.hpp  PoseSolver.hpp  camera_provider.hpp
src/armor_detector/include/armor_detector/debug/: DebugArmorMatch.hpp  DebugClassification.hpp  DebugData.hpp  DebugGUI.hpp  DebugHub.hpp  DebugKeyHandler.hpp  DebugLayerController.hpp  DebugLayerState.hpp  DebugLight.hpp  DebugPose.hpp  DebugPoseMarkerPublisher.hpp  DebugPreprocess.hpp  DebugResult.hpp  DebugRoiRecorder.hpp  DebugTiming.hpp  DebugYolo.hpp  DetectionDebugData.hpp  IDebugObserver.hpp
src/armor_detector/include/armor_detector/detector/: ArmorDetector.hpp  DetectionBackend.hpp  DetectionResult.hpp  Detector.hpp  IArmorDetectorBackend.hpp  LightBarCorrector.hpp  LightDetector.hpp  TraditionalBackend.hpp  YoloBackend.hpp
src/armor_detector/include/armor_detector/tools/: angle.hpp  armor_geometry.hpp  geometry.hpp  transform.hpp
src/armor_detector/include/armor_detector/types/: ArmorData.hpp  CameraInfo.hpp  Frame.hpp
src/armor_detector/include/armor_detector/yaw/: YawSearch.hpp
src/armor_detector/launch/: auto_test.launch.py  video1.launch.py
src/armor_detector/model/: README.md  number_cnn.onnx
src/armor_detector/src/: CameraProvider.cpp  DetectorNode.cpp  NumberClassifier.cpp  PoseSolver.cpp  camera_provider.cpp  detector_node.cpp
src/armor_detector/src/debug/: DebugArmorMatchView.cpp  DebugClassificationView.cpp  DebugGUI.cpp  DebugKeyHandler.cpp  DebugLayerController.cpp  DebugLightView.cpp  DebugMsg.cpp  DebugPoseMarkerPublisher.cpp  DebugPreprocessView.cpp  DebugResultView.cpp  DebugTiming.cpp  DebugYolo.cpp
src/armor_detector/src/detector/: ArmorDetector.cpp  Detector.cpp  LightBarCorrector.cpp  LightDetector.cpp  TraditionalBackend.cpp  YoloBackend.cpp
src/armor_detector/src/yaw/: YawSearch.cpp
